--- a/css/main.css
+++ b/css/main.css
@@ -45,22 +45,32 @@ button {
 
 body {
     min-height: 100vh;
-    background-color: var(--clr-gray);
+    background-color: #3498db;
+    
 }
 
 header {
-    padding-block: 1rem;
+    padding-block: 2rem;
     box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, .5);
 }
 
 .nav {
     display: flex;
     flex-direction: column;
+    background-color:#ffffff20;
+    border: 2px solid #00000040;
+    box-shadow: 0px 0px 30px 10px #00000020;
+    padding: 50px 30px;
     gap: 1rem;
+    border-radius: 3rem;
     align-items: flex-start;
     padding-inline: 2rem;
-    max-width: 1000px;
+    max-width: 900px;
     margin: 0 auto;
+    transition: 0.5s;
+}
+.nav:hover {
+    transform: scale(1.1);
 }
 
 .nav-list {
@@ -71,9 +81,8 @@ header {
 }
 
 .btn-header {
-    background-color: var(--clr-gray);
-    padding: .5rem;
-    border-radius: 100vmax;
+    padding: .6rem;
+    border-radius: .1rem;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 600;
@@ -98,13 +107,13 @@ main {
     gap: 1rem;
 }
 
-@media screen and (min-width: 470px) {
+@media screen and (min-width: 700px) {
     .pokemon-todos {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1000px) {
     .pokemon-todos {
         grid-template-columns: 1fr 1fr 1fr;
     }
@@ -112,40 +121,45 @@ main {
 
 .pokemon {
     border-radius: 1rem;
-    background-color: #00000020;
+    background-color: #2e4053;
     box-shadow: 0 0 5rem -1rem rgba(0, 0, 0, .25);
     padding-block: 1rem;
     text-transform: uppercase;
     position: relative;
     isolation: isolate;
     overflow: hidden;
-    transition: .2s;
+    transition: .3s;
+    margin-left: 2rem;
+    margin-top: 1rem;
 }
 .pokemon:hover {
     transform: scale(1.1);
+    background: #ffffff10;
     box-shadow: 0 0 5rem -2rem rgba(0, 0, 0, 0);
 }
 
 .pokemon-id-back {
     position: absolute;
     top: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 6rem;
+    left: 40%;
+    transform: translateX(-10%);
+    transform: translateY(50%);
+    font-size: 3rem;
     font-weight: 800;
     z-index: -1;
-    color: var(--clr-gray);
+    color: #ffffff80;
 }
 
 .pokemon-imagen {
     padding-inline: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .pokemon-imagen img {
-    width: 100%;
+    width: 50%;
     max-width: 6rem;
+    
 }
 
 .pokemon-info {
@@ -166,7 +180,7 @@ main {
 }
 
 .pokemon-id {
-    background-color: var(--clr-gray);
+    background-color: var(--clr-black);
     padding: .25rem .5rem;
     border-radius: 100vmax;
     font-size: .75rem;
@@ -174,7 +188,10 @@ main {
 }
 
 .pokemon-nombre {
-    font-size: 1.4rem;
+    font-size: 1.4rem;  
+}
+h2{
+    color:  #ecf0f1;
 }
 
 .pokemon-tipos {
@@ -198,9 +215,12 @@ main {
 }
 
 .stat {
-    background-color: var(--clr-gray);
+    background-color: var(--clr-white);
     padding: .25rem .5rem;
     border-radius: 100vmax;
+}
+p{
+ color: #f7f7f7;   
 }
 
 
