--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ header {
     margin: 0 auto;
     transition: 0.5s;
 }
-.nav:hover {
+.nav:hover {            
     transform: scale(1.1);
 }
 
@@ -82,7 +82,7 @@ header {
 
 .btn-header {
     padding: .6rem;
-    border-radius: .1rem;
+    border-radius: 2rem;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 600;
@@ -121,9 +121,10 @@ main {
 
 .pokemon {
     border-radius: 1rem;
-    background-color: #2e4053;
+    background-color: transparent;
     box-shadow: 0 0 5rem -1rem rgba(0, 0, 0, .25);
     padding-block: 1rem;
+    border: 2px solid #00000040;
     text-transform: uppercase;
     position: relative;
     isolation: isolate;
@@ -134,8 +135,9 @@ main {
 }
 .pokemon:hover {
     transform: scale(1.1);
-    background: #ffffff10;
+    background:  #2e4053 ;
     box-shadow: 0 0 5rem -2rem rgba(0, 0, 0, 0);
+    border: 2px solid #ffffff;
 }
 
 .pokemon-id-back {
